--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
     </style>
     <link rel="stylesheet" href="./navbar.css">
 </head>
-<div class="navbar" id="navbar"></div>
+<div class="navbar" id="navbar">
+    <nav>
+        <ul>
+            <li><a href="./calculator.html">Calculator</a> </li>
+            <li><a href="./todo.html">To-Do List</a> </li>
+            <li><a href="./drum.html">Drum</a> </li>
+            <li><a href="./generato.html">Story Generator</a> </li>
+        </ul>
+    </nav>
+</div>
 <body>
     <div class="calculator">
         <div class="display" id="display"></div>
