--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     </div>
 
     <script>
-        fetch('navbar.html')
-            .then(response => response.text())
-            .then(data => {
-            document.getElementById('navbar').innerHTML = data;
-            });
+        // fetch('navbar.html')
+        //     .then(response => response.text())
+        //     .then(data => {
+        //     document.getElementById('navbar').innerHTML = data;
+        //     });
         function appendToDisplay(value) {
             document.getElementById('display').innerText += value;
         }
