--- a/todo.html
+++ b/todo.html
@@ -96,7 +96,16 @@
     </style>
 </head>
 <body>
-    <div class="navbar" id="navbar"></div>
+    <div class="navbar" id="navbar">
+            <nav>
+                <ul>
+                    <li><a href="./calculator.html">Calculator</a> </li>
+                    <li><a href="./todo.html">To-Do List</a> </li>
+                    <li><a href="./drum.html">Drum</a> </li>
+                    <li><a href="./generato.html">Story Generator</a> </li>
+                </ul>
+            </nav>
+    </div>
     <div class="container">
         <h1>To-Do List</h1>
 
@@ -123,11 +132,11 @@
     </div>
 
     <script>
-                fetch('navbar.html')
-                        .then(response => response.text())
-                        .then(data => {
-                            document.getElementById('navbar').innerHTML = data;
-                        });
+                // fetch('navbar.html')
+                //         .then(response => response.text())
+                //         .then(data => {
+                //             document.getElementById('navbar').innerHTML = data;
+                //         });
         // Get DOM elements
         //Here, the necessary DOM elements (task input, due date input, buttons, and task list) are
         // retrieved using document.getElementById().
